force-app/main/default/objects/vlocity_ins__Rule__c/vlocity_ins__Rule__c.object-meta.xml
<CustomObject>
    <description>Vlocity Rules, or Vlocity CPQ Rules, are rules used to define constraints and actions taken to configure, price and quote products or services.</description>
    <label>Vlocity Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>