force-app/main/default/objects/vlocity_ins__Rule__c/fields/vlocity_ins__Expression__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Expression__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>